get-started page completed

--- a/content/install.html
+++ b/content/install.html
@@ -1,5 +1,5 @@
 <div class="install-section">
-  <h3>Install Bioconductor Packages</h3>
+  <h3 id="install-bioconductor-packages">Install Bioconductor Packages</h3>
   <p>To install core packages, type the following in an R command window:</p>
 
   <pre>
@@ -31,7 +31,7 @@ BiocManager::install(c("GenomicFeatures", "AnnotationDbi"))
     >.
   </p>
 
-  <h3>Find Bioconductor Packages</h3>
+  <h3 id="find-bioconductor-packages">Find Bioconductor Packages</h3>
 
   <p>Visit the <a>software package list</a> to discover available packages.</p>
   <p>
@@ -49,7 +49,9 @@ BiocManager::available()
     organism annotation packages.
   </p>
 
-  <h3>Update Installed Bioconductor Packages</h3>
+  <h3 id="update-bioconductor-packages">
+    Update Installed Bioconductor Packages
+  </h3>
 
   <p>
     Bioconductor packages, especially those in the development branch, are
@@ -128,7 +130,9 @@ BiocManager::install(pkgs, type = "source", checkBuilt = TRUE)
     compilers installed.
   </p>
 
-  <h3>Troubleshoot Package Installations</h3>
+  <h3 id="troubleshoot-bioconductor-packages">
+    Troubleshoot Package Installations
+  </h3>
 
   <p>Use the commands:</p>
 
@@ -155,7 +159,7 @@ BiocManager::valid()     ## R version 3.5 or later
     above.
   </p>
 
-  <h3>Why use BiocManager::install()?</h3>
+  <h3 href="why-biocmanagerinstall">Why use BiocManager::install()?</h3>
 
   <p>
     <strong>BiocManager::install()</strong> is the recommended way to install
