--- a/content/install.html
+++ b/content/install.html
@@ -159,7 +159,7 @@ BiocManager::valid()     ## R version 3.5 or later
     above.
   </p>
 
-  <h3 href="why-biocmanagerinstall">Why use BiocManager::install()?</h3>
+  <h3 id="why-biocmanagerinstall">Why use BiocManager::install()?</h3>
 
   <p>
     <strong>BiocManager::install()</strong> is the recommended way to install
