--- a/content/help/index.html
+++ b/content/help/index.html
@@ -1,36 +1,153 @@
-   <!-- because this page is special, with three boxes per row, three columns,
-        we'll use a bumper image to make sure the heights are all the same
-        for each row. (see inv.gif.) make the bumper image for each row taller
-		than the tallest  expected content for each row. this is lame, but the
-		closest we could come to making the effect look correct on all browsers
-		and platforms.
+<h1 class="format-bold">Learn</h1>
+<div class="learn-container">
+  <div class="learn-content-upper">
+    <section class="learn-intro">
+      <h2>
+        Find out all you need to know about Bioconductor and it’s packages
+      </h2>
+      <p>
+        Whether you're a new user seeking to get started or an experienced
+        developer, our knowledge base provides you with the necessary tools and
+        insights to navigate our product effortlessly.
+      </p>
+    </section>
+    <div class="learn-links">
+      <section >
+          <h4>Documentation</h4>
+        <ul>
+            <li>
+            <a href="/help/package-vignettes/"> Package vignettes and manuals. </a>
+            </li>
+            <li>
+                <a href="/packages/release/workflows/">
+                Workflows for learning and use.
+                </a>
+            </li>
+            <li>
+            <a href="/books/release/">
+            Several online books for comprehensive coverage of a particular
+            research field, biological question, or technology.</a
+            >
+            </li>
+            <li>
+            <a href="/help/course-materials/">Course and conference material.</a>
+            </li>
+            <li>
+            <a href="https://www.youtube.com/user/bioconductor">Videos</a>
+            </li>
+            <li>
+            <a href="/help/community/"> Community resources </a> and
+            <a href="https://support.bioconductor.org/t/Tutorials/">tutorials</a>.
+            </li>
+            <li>
+            <a href="http://cran.r-project.org/"> R / CRAN packages </a> and
+            <a href="http://www.r-project.org/other-docs.html">documentation</a>
+            </li>
+        </ul>
+      </section>
 
-        to avoid problems with ie7, or ie8/compatibility mode, be sure to place a 
-        &nbsp; as the last line in each box.  if omitted and the box ends with a 
-        <ul> element, the boxes won't line up correctly.  --> 
+      <section>
+          <h4>Support</h4>
+          <p>
+          Please read the
+          <a href="/help/support/posting-guide/">posting guide</a>. Post
+          questions about Bioconductor to one of the following locations:
+          </p>
+        <ul>
+            <li>
+                <a href="https://support.bioconductor.org/"
+                >Support site - for questions about Bioconductor packages
+                </a>
+            </li>
+            <li>
+                <a href="/help/support/#bioc-devel"
+                >Bioc-devel mailing list - for package developers
+                </a>
+            </li>
+        </ul>
+      </section>
 
-<div style="width:33%;float:left;">
-<%= render("/_documentation/") %>
-</div>
+      <section>
+          <h4>Packages</h4>
+          <p>Bioconductor's stable, semi-annual release:</p>
+        <ul>
+            <li>
+            <a class="symlink" href="/packages/release/BiocViews.html#___Software">Analysis software packages. </a> 
+            </li>
+            <li>
+            <a class="symlink" href="/packages/release/BiocViews.html#___AnnotationData">Annotation packages. </a> 
+            </li>
+            <li>
+            <a class="symlink" href="/packages/release/BiocViews.html#___ExperimentData">Illustrative experiment data packages</a> 
+        </li>
+        <li>
+            <a class="symlink" href="/packages/release/BiocViews.html#___Workflow">Workflow packages.</a>
+        </li>
+        <li>
+            <a class="symlink" href="/books/release/">Online books</a>
+            </li>
+            <li>
+            <a href="/news/bioc_<%=config[:release_version].sub(".", "_")%>_release"> Latest release announcement</a>
+            </li>
+            <li> Bioconductor is also available via<a href="/help/docker/">Docke Images</a> and for use in the <a href="https://anvil.bioconductor.org/">AnVIL</a>.</li>
+        </ul>
+      </section>
+    </div>
+  </div>
+  <hr class="learn-divider" />
+  <div class="learn-content-lower">
+    <div class="publicaitons-releases-faq">
+        <section>
+            <ul>
+                <h4>Publications</h4>
+                <li>
+                    <a href="/help/publications/index.html#featured">Featured</a> 
+                    and 
+                    <a href="/help/publications/index.html#recent"> recent citations</a>
+                </li>
+                <li>
+                    <a href="http://www.ncbi.nlm.nih.gov/pubmed/?term=bioconductor&sort=pubdate">PubMed</a>,
+                    <a href="http://www.ncbi.nlm.nih.gov/pmc/?term=bioconductor&sort=pubdate">PubMed Central</a>,
+                    and 
+                    <a href="http://scholar.google.com/scholar?q=bioconductor&btnG=Search">Google Scholar searches</a>
+                </li>
+            </ul>
+            
+            <p>
+                <a>Source code is stored in Git.</a><br/> 
+                Software packages are built and checked nightly.
+            </p>
 
-<div style="width:33%;float:left;">
-<%= render("/_support/") %>
-</div>
+        </section>
 
-<div style="width:33%;float:left;">
-<%= render("/_bioc_release_packages/") %>
-</div>
+        <section>
+            <ul>
+                <h4>Previous releases</h4>
+                <li><a href="/packages/3.16/BiocViews.html#___Software">3.16 (4.2)</a></li>
+                <li><a href="/packages/3.15/BiocViews.html#___Software">3.15 (4.2)</a></li>
+                <li><a href="/packages/3.14/BiocViews.html#___Software">3.14 (4.1)</a></li>
+                <li><a href="/packages/3.13/BiocViews.html#___Software">3.13 (4.1)</a></li>
+                <li><a href="/packages/3.12/BiocViews.html#___Software">3.12 (4.0)</a></li>
+            </ul>
+            <p>
+                <a href="https://www.bioconductor.org/about/release-announcements/#release-versions"> All Bioconductor (R) versions</a>
+                <a href=""> Release announcements</a>
+             </p>
+        </section>
 
-<br clear="all"/>
+        <section>
+            <ul>
+                <h4>FAQ</h4>
+                <ul>
+                    <li><a href="/help/faq">Bioconductor FAQ</a></li>
+                </ul>
+            </ul>
+        </section>
+    </div>
+  </div>
 
-<div style="width:33%;float:left;">
-<%= render("/_publications/") %>
-</div>
-
-<div style="width:33%;float:left;">
-<%= render("/_bioc_older_packages/") %>
-</div>
-
-<div style="width:33%;float:left;">
-<%= render("/_faq/") %>
+  <span> <img src="/images/icons/svgs/question-mark-circle.svg" alt="?" /> 
+    <p>For questions / concerns, please contact us at email: <a>bioc-devel@r-project.org</a>
+    </p>  <img src="/images/icons/svgs/chevron-right.svg" alt="?" />  
+  </span>
 </div>
