--- a/content/help/index.html
+++ b/content/help/index.html
@@ -5,7 +5,7 @@
       <h2>
         Find out all you need to know about Bioconductor and it’s packages
       </h2>
-      <p>
+      <p class="text-large">
         Whether you're a new user seeking to get started or an experienced
         developer, our knowledge base provides you with the necessary tools and
         insights to navigate our product effortlessly.
@@ -16,51 +16,51 @@
           <h4>Documentation</h4>
         <ul>
             <li>
-            <a href="/help/package-vignettes/"> Package vignettes and manuals. </a>
+            <a class="text-large" href="/help/package-vignettes/"> Package vignettes and manuals. </a>
             </li>
             <li>
-                <a href="/packages/release/workflows/">
+                <a class="text-large" href="/packages/release/workflows/">
                 Workflows for learning and use.
                 </a>
             </li>
             <li>
-            <a href="/books/release/">
+            <a class="text-large" href="/books/release/">
             Several online books for comprehensive coverage of a particular
             research field, biological question, or technology.</a
             >
             </li>
             <li>
-            <a href="/help/course-materials/">Course and conference material.</a>
+            <a class="text-large" href="/help/course-materials/">Course and conference material.</a>
             </li>
             <li>
-            <a href="https://www.youtube.com/user/bioconductor">Videos</a>
+            <a class="text-large" href="https://www.youtube.com/user/bioconductor">Videos</a>
             </li>
             <li>
-            <a href="/help/community/"> Community resources </a> and
-            <a href="https://support.bioconductor.org/t/Tutorials/">tutorials</a>.
+            <a class="text-large" href="/help/community/"> Community resources </a> and
+            <a class="text-large" href="https://support.bioconductor.org/t/Tutorials/">tutorials</a>.
             </li>
             <li>
-            <a href="http://cran.r-project.org/"> R / CRAN packages </a> and
-            <a href="http://www.r-project.org/other-docs.html">documentation</a>
+            <a class="text-large" href="http://cran.r-project.org/"> R / CRAN packages </a> and
+            <a class="text-large" href="http://www.r-project.org/other-docs.html">documentation</a>
             </li>
         </ul>
       </section>
 
       <section>
           <h4>Support</h4>
-          <p>
+          <p class="text-large" class="text-large">
           Please read the
-          <a href="/help/support/posting-guide/">posting guide</a>. Post
+          <a class="text-large" href="/help/support/posting-guide/">posting guide</a>. Post
           questions about Bioconductor to one of the following locations:
           </p>
         <ul>
             <li>
-                <a href="https://support.bioconductor.org/"
+                <a class="text-large" href="https://support.bioconductor.org/"
                 >Support site - for questions about Bioconductor packages
                 </a>
             </li>
             <li>
-                <a href="/help/support/#bioc-devel"
+                <a class="text-large" href="/help/support/#bioc-devel"
                 >Bioc-devel mailing list - for package developers
                 </a>
             </li>
@@ -69,27 +69,29 @@
 
       <section>
           <h4>Packages</h4>
-          <p>Bioconductor's stable, semi-annual release:</p>
+          <p class="text-large" class="text-large">Bioconductor's stable, semi-annual release:</p>
         <ul>
             <li>
-            <a class="symlink" href="/packages/release/BiocViews.html#___Software">Analysis software packages. </a> 
+            <a class="text-large" class="symlink" href="/packages/release/BiocViews.html#___Software">Analysis software packages. </a> 
             </li>
             <li>
-            <a class="symlink" href="/packages/release/BiocViews.html#___AnnotationData">Annotation packages. </a> 
+            <a class="text-large" class="symlink" href="/packages/release/BiocViews.html#___AnnotationData">Annotation packages. </a> 
             </li>
             <li>
-            <a class="symlink" href="/packages/release/BiocViews.html#___ExperimentData">Illustrative experiment data packages</a> 
+            <a class="text-large" class="symlink" href="/packages/release/BiocViews.html#___ExperimentData">Illustrative experiment data packages</a> 
         </li>
         <li>
-            <a class="symlink" href="/packages/release/BiocViews.html#___Workflow">Workflow packages.</a>
+            <a class="text-large" class="symlink" href="/packages/release/BiocViews.html#___Workflow">Workflow packages.</a>
         </li>
         <li>
-            <a class="symlink" href="/books/release/">Online books</a>
+            <a class="text-large" class="symlink" href="/books/release/">Online books</a>
             </li>
             <li>
-            <a href="/news/bioc_<%=config[:release_version].sub(".", "_")%>_release"> Latest release announcement</a>
+            <a class="text-large" href="/news/bioc_<%=config[:release_version].sub(".", "_")%>_release"> Latest release announcement</a>
             </li>
-            <li> Bioconductor is also available via<a href="/help/docker/">Docke Images</a> and for use in the <a href="https://anvil.bioconductor.org/">AnVIL</a>.</li>
+            <li> <p class="text-large" >Bioconductor is also available via
+                <a class="text-large" href="/help/docker/">Docke Images</a>
+                 and for use in the <a class="text-large" href="https://anvil.bioconductor.org/">AnVIL</a>.</p></li>
         </ul>
       </section>
     </div>
@@ -101,20 +103,20 @@
             <ul>
                 <h4>Publications</h4>
                 <li>
-                    <a href="/help/publications/index.html#featured">Featured</a> 
+                    <a class="text-large" href="/help/publications/index.html#featured">Featured</a> 
                     and 
-                    <a href="/help/publications/index.html#recent"> recent citations</a>
+                    <a class="text-large" href="/help/publications/index.html#recent"> recent citations</a>
                 </li>
                 <li>
-                    <a href="http://www.ncbi.nlm.nih.gov/pubmed/?term=bioconductor&sort=pubdate">PubMed</a>,
-                    <a href="http://www.ncbi.nlm.nih.gov/pmc/?term=bioconductor&sort=pubdate">PubMed Central</a>,
+                    <a class="text-large" href="http://www.ncbi.nlm.nih.gov/pubmed/?term=bioconductor&sort=pubdate">PubMed</a>,
+                    <a class="text-large" href="http://www.ncbi.nlm.nih.gov/pmc/?term=bioconductor&sort=pubdate">PubMed Central</a>,
                     and 
-                    <a href="http://scholar.google.com/scholar?q=bioconductor&btnG=Search">Google Scholar searches</a>
+                    <a class="text-large" href="http://scholar.google.com/scholar?q=bioconductor&btnG=Search">Google Scholar searches</a>
                 </li>
             </ul>
             
-            <p>
-                <a>Source code is stored in Git.</a><br/> 
+            <p class="text-large">
+                <a class="text-large">Source code is stored in Git.</a><br/> 
                 Software packages are built and checked nightly.
             </p>
 
@@ -123,15 +125,15 @@
         <section>
             <ul>
                 <h4>Previous releases</h4>
-                <li><a href="/packages/3.16/BiocViews.html#___Software">3.16 (4.2)</a></li>
-                <li><a href="/packages/3.15/BiocViews.html#___Software">3.15 (4.2)</a></li>
-                <li><a href="/packages/3.14/BiocViews.html#___Software">3.14 (4.1)</a></li>
-                <li><a href="/packages/3.13/BiocViews.html#___Software">3.13 (4.1)</a></li>
-                <li><a href="/packages/3.12/BiocViews.html#___Software">3.12 (4.0)</a></li>
+                <li><a class="text-large" href="/packages/3.16/BiocViews.html#___Software">3.16 (4.2)</a></li>
+                <li><a class="text-large" href="/packages/3.15/BiocViews.html#___Software">3.15 (4.2)</a></li>
+                <li><a class="text-large" href="/packages/3.14/BiocViews.html#___Software">3.14 (4.1)</a></li>
+                <li><a class="text-large" href="/packages/3.13/BiocViews.html#___Software">3.13 (4.1)</a></li>
+                <li><a class="text-large" href="/packages/3.12/BiocViews.html#___Software">3.12 (4.0)</a></li>
             </ul>
-            <p>
-                <a href="https://www.bioconductor.org/about/release-announcements/#release-versions"> All Bioconductor (R) versions</a>
-                <a href=""> Release announcements</a>
+            <p class="text-large">
+                <a class="text-large" href="https://www.bioconductor.org/about/release-announcements/#release-versions"> All Bioconductor (R) versions</a>
+                <a class="text-large" href=""> Release announcements</a>
              </p>
         </section>
 
@@ -139,7 +141,7 @@
             <ul>
                 <h4>FAQ</h4>
                 <ul>
-                    <li><a href="/help/faq">Bioconductor FAQ</a></li>
+                    <li><a class="text-large" href="/help/faq">Bioconductor FAQ</a></li>
                 </ul>
             </ul>
         </section>
@@ -147,7 +149,7 @@
   </div>
 
   <span> <img src="/images/icons/svgs/question-mark-circle.svg" alt="?" /> 
-    <p>For questions / concerns, please contact us at email: <a>bioc-devel@r-project.org</a>
-    </p>  <img src="/images/icons/svgs/chevron-right.svg" alt="?" />  
+    <p class="text-large">For questions / concerns, please contact us at email: <a class="text-large">bioc-devel@r-project.org</a>
+    </p class="text-large">  <img src="/images/icons/svgs/chevron-right.svg" alt="?" />  
   </span>
 </div>
