mobile finishing touches

--- a/content/help/index.html
+++ b/content/help/index.html
@@ -321,7 +321,9 @@
             </svg>
           </li>
           <li>
-            <a class="text-large" href="/news/bioc_<%=config[:release_version].sub(".", "_")%>_release"> Latest release announcement</a>
+            <a class="text-large" href="/news/bioc_<%=config[:release_version].sub(".", "_")%>_release"> Latest release announcement
+              
+            </a>
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="24"
