--- a/content/about/annual-reports.html
+++ b/content/about/annual-reports.html
@@ -1,4 +1,4 @@
-<h1><img src="/images/icons/magnifier.gif" alt="" />Annual Reports</h1>
+<h1>Annual Reports</h1>
 
 <p>
   Project Annual Reports are available in PDF format for the following years:
