changed underscore to dash for linting

--- a/content/about/annual-reports.html
+++ b/content/about/annual-reports.html
@@ -4,7 +4,7 @@
   Project Annual Reports are available in PDF format for the following years:
 </p>
 
-<ul class="inline_list">
+<ul class="inline-list">
   <% annual_reports.sort{|a, b| b[:name] <=> a[:name]}.select do |r| %>
   <li><a href="<%= r[:href] %>"><%= r[:name] %></a></li>
   <% end %>
