--- a/content/help/events.html
+++ b/content/help/events.html
@@ -1,4 +1,4 @@
-<h1><img src="/images/icons/calendar.gif" alt=""/>Events</h1>
+<h1>Events</h1>
 
 <h2>Events Google calendar</h2>
 <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=YWtlczFvZGVsbW9kcDAzODV1ZHB2NDhpY29AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%231A81C2" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
