all styling done apart from bottom text

--- a/content/developers/index.html
+++ b/content/developers/index.html
@@ -152,7 +152,9 @@
           </li>
 
           <li>
-            <a href="https://code.bioconductor.org/">Browsable code base</a>
+            <a class="text-large" href="https://code.bioconductor.org/"
+              >Browsable code base</a
+            >
           </li>
         </ul>
 
@@ -165,11 +167,33 @@
       <section>
         <ul>
           <h4>Development version</h4>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>
+            <a
+              class="text-large"
+              href="/packages/devel/BiocViews.html#___Software">
+              Analysis software packages
+            </a>
+          </li>
+
+          <li>
+            <a
+              class="text-large"
+              href="/packages/devel/BiocViews.html#___AnnotationData">
+              Annotation packages
+            </a>
+          </li>
+
+          <li>
+            <a
+              class="text-large"
+              href="/packages/devel/BiocViews.html#___ExperimentData">
+              Illustrative packages experiment data packages
+            </a>
+          </li>
+
+          <li>
+            <a class="text-large" href="/developers/gitlog">GIT Log</a>
+          </li>
         </ul>
       </section>
 
@@ -177,27 +201,49 @@
         <ul>
           <h4>Community</h4>
           <ul>
-            <li></li>
+            <li>
+              <a class="text-large" href="/developers/developers-forum"
+                >Developers' forum</a
+              >
+            </li>
+            <li>
+              <a class="text-large" href="/developers/new-developer-program"
+                >New developer program</a
+              >
+            </li>
+            <li>
+              <a class="text-large" href="https://support.bioconductor.org/"
+                >Bioconductor support site</a
+              >
+            </li>
+            <li>
+              <a class="text-large" href="https://slack.bioconductor.org/"
+                >Join us on Slack</a
+              >
+            </li>
           </ul>
         </ul>
       </section>
     </div>
   </div>
 
-  <span class="bottom-chip">
-    <img
-      class="learn-question-mark"
-      src="/images/icons/svgs/question-mark-circle.svg"
-      alt="?" />
-    <p class="text-large format-bold">
-      For questions / concerns, please contact us at email:
-      <a class="text-large format-underline format-bold"
-        >bioc-devel@r-project.org</a
-      >
-    </p>
-    <img
-      class="learn-chevron"
-      src="/images/icons/svgs/chevron-right.svg"
-      alt="?" />
-  </span>
+  <a class="data-dev-chip dev-chip" href="https://slack.bioconductor.org/">
+    <div class="data-dev-logo">
+      <img src="/images/icons/slack.png" alt="slack logo" />
+      Join Bioconductor on Slack, and meet hundreds of other developers!
+    </div>
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="24"
+      height="25"
+      viewBox="0 0 24 25"
+      fill="none">
+      <path
+        d="M9 5.90002L16 12.9L9 19.9"
+        stroke="white"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round" />
+    </svg>
+  </a>
 </div>
