--- a/content/developers/index.html
+++ b/content/developers/index.html
@@ -227,23 +227,13 @@
     </div>
   </div>
 
-  <a class="data-dev-chip dev-chip" href="https://slack.bioconductor.org/">
-    <div class="data-dev-logo">
-      <img src="/images/icons/slack.png" alt="slack logo" />
-      Join Bioconductor on Slack, and meet hundreds of other developers!
-    </div>
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      width="24"
-      height="25"
-      viewBox="0 0 24 25"
-      fill="none">
-      <path
-        d="M9 5.90002L16 12.9L9 19.9"
-        stroke="white"
-        stroke-width="2"
-        stroke-linecap="round"
-        stroke-linejoin="round" />
-    </svg>
+  <a
+    class="bottom-chip text-large format-bold"
+    href="https://slack.bioconductor.org/">
+    <img
+      class="bottom-chip-logo"
+      src="/images/icons/slack.png"
+      alt="slack logo" />
+    Join Bioconductor on Slack, and meet hundreds of other developers!
   </a>
 </div>
