--- a/content/help/index.html
+++ b/content/help/index.html
@@ -290,12 +290,10 @@
     </div>
   </div>
 
-  <span class="bottom-chip">
-    <img class="learn-question-mark" src="/images/icons/svgs/question-mark-circle.svg" alt="?" />
-    <p class="text-large format-bold">
-      For questions / concerns, please contact us at email:
-      <a class="text-large format-underline format-bold">bioc-devel@r-project.org</a>
-    </p>
-    <img class="learn-chevron"src="/images/icons/svgs/chevron-right.svg" alt="?" />
-  </span>
+   <a
+    class="bottom-chip text-large format-bold"
+    href="https://slack.bioconductor.org/">
+    <img class="bottom-chip-logo" src="/images/icons/svgs/question-mark-circle.svg" alt="?"/>
+    <p class="text-large">For questions / concerns, please contact us at email: <mark class="text-large format-underline"> bioc-devel@r-project.org</mark></p>
+  </a>
 </div>
