--- a/content/help/index.html
+++ b/content/help/index.html
@@ -292,7 +292,7 @@
 
    <a
     class="bottom-chip text-large format-bold"
-    href="https://slack.bioconductor.org/">
+    href="mailto: bioc-devel@r-project.org">
     <img class="bottom-chip-logo" src="/images/icons/svgs/question-mark-circle.svg" alt="?"/>
     <p class="text-large">For questions / concerns, please contact us at email: <mark class="text-large format-underline"> bioc-devel@r-project.org</mark></p>
   </a>
