--- a/assets/help/bioc-views.html
+++ b/assets/help/bioc-views.html
@@ -27,8 +27,13 @@
 <link type="text/css" rel="stylesheet" href="/style/tree-widget/!style.css" />
 
 <div id="tree_outer" class="biocViewsTreeContainer">
-  <div style="float: left; width: 33%">
-    <h3>Bioconductor version <span id="bioc_version"></span></h3>
+  <div
+    class="packages-subnav"
+    style="float: left; width: 33%; height: fit-content"
+  >
+    <p class="format-bold">
+      Bioconductor version <span id="bioc_version"></span>
+    </p>
     <div id="tree-toggler-div">
       <p>
         <input id="tree-toggler" type="checkbox" />
@@ -38,8 +43,8 @@
     </div>
 
     <div class="ui-widget">
-      <label for="autocompleter">Autocomplete biocViews search:</label>
-      <input id="autocompleter" size="35" />
+      <label for="autocompleter">Find biocViews:</label>
+      <input type="text" id="autocompleter" size="35" class="package-input" />
     </div>
 
     <div id="tree"></div>
@@ -48,4 +53,3 @@
   <div id="packages" class="biocViewsPackages"></div>
   <div id="below_tree" class="biocViewsBelowTree"></div>
 </div>
-
