Added mobile styling

--- a/assets/help/bioc-views.html
+++ b/assets/help/bioc-views.html
@@ -27,10 +27,7 @@
 <link type="text/css" rel="stylesheet" href="/style/tree-widget/!style.css" />
 
 <div id="tree_outer" class="biocViewsTreeContainer">
-  <div
-    class="packages-subnav"
-    style="float: left; width: 33%; height: fit-content"
-  >
+  <div class="packages-subnav">
     <p class="format-bold">
       Bioconductor version <span id="bioc_version"></span>
     </p>
