--- a/content/help/index.html
+++ b/content/help/index.html
@@ -292,7 +292,7 @@
 
    <a
     class="bottom-chip text-large format-bold"
-    href="mailto: support.bioconductor.org">
+    href="//support.bioconductor.org">
     <img class="bottom-chip-logo" src="/images/icons/svgs/question-mark-circle.svg" alt="?"/>
     <p class="text-large">For questions / concerns, please contact us: <mark class="text-large format-underline">support.bioconductor.org</mark></p>
   </a>
